--- a/t.tex
+++ b/t.tex
@@ -45,22 +45,23 @@
  %\input{intro.tex}
  %
  %\chapter{Theory} 
- %{\hfill \textit{``There is Nothing More Practical Than A Good Theory''} --- probably K. Lewin}
+ %{\hfill \textit{``There is nothing more practical than a good theory.''} --- probably K. Lewin}
  %\input{theory.tex}
  %
  %\chapter{Numerical methods} 
-  %Computers are useless. They can only give you answers. -- P. Picasso (1968)
+ %{\hfill \textit{``Computers are useless. They can only give you answers.''} --- P. Picasso (1968)}
  %\input{numeric.tex}
 %
  %\chapter{Experimental methods}
  %\input{expe.tex}
 %
-\chapter{Results}
-\hfill \textit{``The purpose of computing is insight, not numbers."} --- R. W. Hamming
-\input{result.tex}
+%\chapter{Results}
+%\hfill \textit{``The purpose of computing is insight, not numbers.''} --- R. W. Hamming
+%\input{result.tex}
 
-\hfill \textit{``If you want to build a ship, don’t drum up people to collect wood and don't assign them tasks and work, but rather teach them to long for the endless immensity of the sea.''} -- Antoine de Saint-Exup\'{e}ry
 \chapter{Conclusion}
+\begin{flushright} \textit{``If you want to build a ship, don't drum up people to collect wood \\and don't assign them tasks and work, but rather teach them to long \\for the endless immensity of the sea.''} --- Antoine de Saint-Exup\'{e}ry \end{flushright}
+
 \input{conclusion.tex}
 
 \label{endtext} 
