--- a/result.tex
+++ b/result.tex
@@ -1009,25 +1009,54 @@ A sufficiently high permittivity can be found in the microwave and terahertz ran
 \FloatBarrier %====================================================================================================
 
 \section{Metallic sheet with slits} \label{section_eot}
-%\begin{figure}[h!]  %{{{ yslit_xcomparison
-	%\caption{Amplitude of \textbf{(a)}  reflectance and \textbf{(b)} transmittance of a single sheet of gold with different width of slits. Sheet thickness was $d_z = 12$ $\mu$m, unit cell size $a = 100$ $\mu$m and grid resolution was 1 $\mu$m. } \label{fg_erods_acomparison} \centering \vspace{-3mm} 
-%%% NOTE: if realistic materials are needed, erods_acomparison-loLoss_r.pdf can be substituted for  erods_acomparison_r.pdf etc.
-%\begin{tabular}{r}
-%\begin{overpic}[width=0.85\textwidth]{img-meep/yslit_xcomparison_r.pdf} \put (-1,28) {\textbf{(a)}} \end{overpic}\vspace{-0.060\textwidth}\\ 
-%\begin{overpic}[width=0.85\textwidth]{img-meep/yslit_xcomparison_t.pdf} \put (-1,28) {\textbf{(b)}} \end{overpic}\vspace{-0.057\textwidth}\\
-%\end{tabular}
-%\end{figure}
-%%}}}
-\paragraph{Low-frequency behaviour}%{{{
-When discussing the electromagnetic behaviour of metallic wires parallel to the electric field, we mentioned that wires with opposite orientation -- parallel to the magnetic field -- do not appreciably interact with the wave. The situation changes when the wires are widened into stripes, with their dimension along the $x$-axis not much smaller than their spacing $a$. They may be then better described as a thin metallic sheet divided by slits that have uniform width $d_x$ and are oriented parallel to the magnetic field.
+\begin{figure}[h!]  %{{{ yslit_xcomparison_d20
+	\caption{Amplitude of \textbf{(a)}  reflectance and \textbf{(b)} transmittance of a single sheet of gold $d_z = 20$ $\mu$m thick with different width of slits $d_x$. Unit cell size $a = 100$ $\mu$m and grid resolution was 1 $\mu$m. } \label{fg_yslit_xcomparison_d20} \centering \vspace{-3mm} 
+\begin{tabular}{r}
+\begin{overpic}[width=0.85\textwidth]{img-meep/yslit_xcomparison_d20_r.pdf} \put (-1,28) {\textbf{(a)}} \end{overpic}\vspace{-0.060\textwidth}\\ 
+\begin{overpic}[width=0.85\textwidth]{img-meep/yslit_xcomparison_d20_t.pdf} \put (-1,28) {\textbf{(b)}} \end{overpic}\vspace{-0.057\textwidth}\\
+\end{tabular}
+\end{figure}
+%}}}
+\paragraph{Low-frequency behaviour of a thin sheet}%{{{
+When discussing the electromagnetic behaviour of metallic wires parallel to the electric field, we mentioned that wires with opposite orientation -- parallel to the magnetic field -- do not appreciably interact with the wave. The situation changes when the wires are widened into stripes, with their dimension along the $x$-axis not much smaller than their spacing $a$. They may be then equivalently described as a thin metallic sheet divided by slits that have uniform width $d_x$ and are oriented parallel to the magnetic field.
 
-Scattering at 
+When the wavelength is significantly longer than the slit distance, a single sheet partially reflects the incident radiation (Fig. \ref{fg_yslit_xcomparison_d20}). The reflection amplitude $|r|$ monotonously decreases with the slit width $d_x$. 
+It vanishes in the low-frequency limit for any $d_x>0$, since the macroscopic structure is not conductive in the direction of the electric field. 
+
+The low-pass filtering capability of this structure is shown in more detail in the continuous scan through $d_x$ in Fig. \ref{fg_yslit_xscan}a. 
+The unit cell size in the $x$-direction for both presented figures was $a_x = 100$ $\upmu$m. 
+The highest frequency in the plots was determined by the onset of the first diffraction order as $c/a_x = 3.0$ THz. 
 
 %}}}
+\begin{figure}[htb] %{{{ fg_yslit_xscan %% TODO REPLACE WITH HR
+	\caption{\textbf{(a)} Reflectance and \textbf{(d)} the imaginary part of the retrieved refractive index  %TODO 
+	% todo Fishnet resolution=2.000e-06 cellsize=1.000e-04 cellsizexy=1.000e-04 slabthick=2.000e-05 yholesize=inf.dat xholesize=*
+	} \label{fg_yslit_dscan}  \centering
+\begin{overpic}[width=0.48\textwidth]{img-meep/yslit_xscan_d20_r.pdf}\put(-1,80){\textbf{(a)}}\end{overpic}
+\begin{overpic}[width=0.48\textwidth]{img-meep/yslit_xscan_d20_ni.pdf}\put(-1,80){\textbf{(b)}}\end{overpic}\\
+\end{figure}
+%}}}
 \paragraph{Standing surface plasmon resonance}%{{{
+At a frequency just below the onset of diffraction, a relatively narrow notch in the reflectance spectrum is observed. The frequency where $|r|$ drops close to zero depends on the slab thickness $d_z$ -- which will be shown later -- and on the slit width $d_x$. In the above figures where $d_z$ was fixed at $20$ $\upmu$m, the lowest frequency of the notch around $2.8$ THz is reached for $d_x/a_x \sim 0.3$ (see Fig. \ref{fg_yslit_xscan}a). For a narrower or wider slit, the frequency of the notch increases and eventually approaches the diffraction limit of $3.0$ THz. 
+
+Nonetheless, the notch does not disappear and always some frequency can be found where nearly 100 \% of the energy is transmitted through the structure, even when the slits are extremely narrow.
+
+The phenomenon known as \textit{extraordinary transmission} is mediated by surface plasmons propagating along the front and rear surfaces of the metallic sheet. The notch in reflectance is always observed at the exact frequency that stipulates that the plasmon wavelength is equal to the unit cell size $a_x$.
 
 % todo ... counter-propagating surface plasmons, with their wavelength exactly matching the transverse unit cell dimension $a_x$.
+Since the structure and fields are symmetric with regards to the $x$-axis, an equal amplitude of plasmons propagating forward and backward is excited. They form a standing plasmonic wave, with nodes of the oscillating current centered at the slit centers. The extraordinary transmission relies on coupling of the incoming plane wave to SPP, coupling of SPP to their mirror counterpart on the rear side of the structure, and re-radiation of the plane wave. Since it is a resonant process, it can transmit high amplitude through weak coupling of arbitrarily narrow slits. 
 
+For this to happen, extraordinary transmission however requires strict periodicity of the slits along the $x$-axis, and symmetry of the front and rear sides of the structure along the $z$-axis.
+A numerical experiment (not shown here) has proven that the $|r| \sim 0$ notch disappears when a dielectric substrate approaches one side of the structure. The dielectric did not have to touch the metal directly; a distance similar to $a_x$, or, the approximate decay length of the surface plasmons, was sufficient. When the dielectric substrate was added symmetrically from both sides, the extraordinary transmission was restored.
+
+%}}}
+\begin{figure}[htb] %{{{ fg_yslit_dscan
+	\caption{\textbf{(a)} Reflectance and \textbf{(d)} the imaginary part of the retrieved refractive index  %TODO 
+	% todo  Fishnet xholesize=2.000e-05 resolution=2.000e-06 cellsize=1.000e-04 cellsizexy=1.000e-04 yholesize=inf.dat slabthick=*
+	} \label{fg_yslit_dscan}  \centering
+\begin{overpic}[width=0.48\textwidth]{img-meep/yslit_dscan_x20_HR_r.pdf}\put(-1,80){\textbf{(a)}}\end{overpic}
+\begin{overpic}[width=0.48\textwidth]{img-meep/yslit_dscan_x20_HR_ni.pdf}\put(-1,80){\textbf{(b)}}\end{overpic}\\
+\end{figure}
 %}}}
 \paragraph{Effect of metallic slab thickness}%{{{
 
@@ -1035,7 +1064,7 @@ Scattering at
 \paragraph{Effective parameters of sheet-slit array}%{{{
 So far we discussed the properties of a single layer only, but when the unit cell size along the wave propagation axis is given, the effective parameters can be also computed for an infinite stack thereof.
 
-However, due attention must be paid to the validity of s-parameter method, since this is one of structures with strong coupling to the neigbouring cells.  A great portion  of the resonant energy is carried by the surface plasmons that are not localized inside the gap. On the contary, it was already shown that SPP easily couple with those on nearby metallic surfaces, forming slot-waveguide modes \cite{weiner2011electromagnetics}.
+However, due attention must be paid to whether the conventional scattering parameter method gives correct results, since this is one of structures with strong coupling to the neigbouring cells. A great portion  of the resonant energy is carried by the surface plasmons that are not localized inside the gap. On the contary, it was already shown that SPP easily couple with those on nearby metallic surfaces, forming slot-waveguide modes \cite{weiner2011electromagnetics}.
 
 The current-driven homogenisation setup simulates one unit cell in an exact periodic environment of other cells, and is fully  suitable even for structures with strong coupling of neighbouring cells.
 %}}}
@@ -1048,6 +1077,7 @@ The current-driven homogenisation setup simulates one unit cell in an exact peri
 % when gold in optical range is used, a lot of energy is coupled to SPP: optimum 40% at w=0.23lambda
 % close to the slit, many evanescent modes overlap; can be uniquely decomposed
 % for slits in thick slabs: theory of waveguide	Ph. Lalanne et al., J. Opt. A Pure Appl. Opt. 2, 48 (2000).
+
 
 \cite{weiner2011electromagnetics} % Weiner-Transmission_through_metallic_slits.pdf
 % references to many papers on subwavelength slit and aperture transmission
@@ -1066,14 +1096,6 @@ The points of low reflectance in Fig. \ref{fg_yslit_dscan}a correspond to the ef
 such a point in the spectra corresponds to a fundamental resonance of the slit.
 % todo for a slit in a  thicker metallic slab, the 
 
-\begin{figure}[htb] %{{{ fg_yslit_dscan
-	\caption{\textbf{(a)} Reflectance and \textbf{(d)} the imaginary part of the retrieved refractive index  %TODO 
-	% yslit_dscan_nr.pdf    yslit_dscan_t.pdf
-	} \label{fg_yslit_dscan}  \centering
-\begin{overpic}[width=0.48\textwidth]{img-meep/yslit_dscan_r.pdf}\put(-1,80){\textbf{(a)}}\end{overpic}
-\begin{overpic}[width=0.48\textwidth]{img-meep/yslit_dscan_ni.pdf}\put(-1,80){\textbf{(b)}}\end{overpic}\\
-\end{figure}
-%}}}
 As mentioned earlier, thin metallic wires do not appreciably interact with the electromagnetic wave when oriented perpendicular to the electric field. The situation changes when they are broadened to form an array of conductive stripes.
 
 
