--- a/fdphd.bib
+++ b/fdphd.bib
@@ -1322,6 +1322,17 @@ Terahertz spectroscopy of ferroelectrics and related materials
 
 /*}}}*/
 % -- Fishnets, meshes and EOT --/*{{{*/
+@article{weiner2011electromagnetics,
+  title={The electromagnetics of light transmission through subwavelength slits in metallic films},
+  author={Weiner, John},
+  journal={Optics express},
+  volume={19},
+  number={17},
+  pages={16139--16153},
+  year={2011},
+  publisher={Optical Society of America}
+}
+
 @article{croenne2009left,
   title={Left handed dispersion of a stack of subwavelength hole metal arrays at terahertz frequencies},
   author={Cro{\"e}nne, Charles and Garet, Fr{\'e}d{\'e}ric and Lheurette, {\'E}ric and Coutaz, Jean-Louis and Lippens, Didier},
@@ -1372,30 +1383,15 @@ Terahertz spectroscopy of ferroelectrics and related materials
   year={2011},
   publisher={IEEE}
 }
-Wang exp neg refr on wedge THz
-Wang Composite left right arrays of holes
-Weiner Transmission through metallic slits
-Yahiaoui Metallodielectric structure with negative N
-Zhang Transmission of doped silicon hole array
-
-
-
-
-
-
-
-
-
-
-@article{jelinek2010fishnet,
-  title={Fishnet metamaterials-rules for refraction and limits of homogenization},
-  author={Jelinek, Lukas and Marques, Ricardo and Machac, Jan},
-  journal={Optics express},
-  volume={18},
-  number={17},
-  pages={17940--17949},
+@article{wang2010composite,
+  title={Composite left/right-handed stacked hole arrays at submillimeter wavelengths},
+  author={Wang, Shengxiang and Garet, Fr{\'e}d{\'e}ric and Blary, Karine and Cro{\"e}nne, Charles and Lheurette, Eric and Coutaz, Jean-Louis and Lippens, Didier},
+  journal={Journal of Applied Physics},
+  volume={107},
+  number={7},
+  pages={074510},
   year={2010},
-  publisher={Optical Society of America}
+  publisher={AIP Publishing}
 }
 @article{valentine2011development,
   title={Development of bulk optical negative index fishnet metamaterials: Achieving a low-loss and broadband response through coupling},
@@ -1415,6 +1411,16 @@ Zhang Transmission of doped silicon hole array
   number={21},
   pages={4245--4247},
   year={2011},
+  publisher={Optical Society of America}
+}
+@article{jelinek2010fishnet,
+  title={Fishnet metamaterials-rules for refraction and limits of homogenization},
+  author={Jelinek, Lukas and Marques, Ricardo and Machac, Jan},
+  journal={Optics express},
+  volume={18},
+  number={17},
+  pages={17940--17949},
+  year={2010},
   publisher={Optical Society of America}
 }
 
