--- a/theory.tex
+++ b/theory.tex
@@ -941,7 +941,7 @@ The periodically repeating one-dimensional interval of $K\in\langle-\pi/a, \pi/a
 In two or three dimensions, any $m$-th Brillouin zone is defined as the set of all points for which the center point $K=0$ is the $m$-th closest point from the regular lattice of all points where $\KK = (2\pi m_1/a, 2\pi m_2/a, \ldots)$ for $m_1, n_2, \ldots \in \mathbb{Z}$.
 All Brillouin zones have equal measure (i.e. length, area or volume), and moreover, they can be transformed into the first one by simple translation. %% TODO specify what this re-arrangement means
 
-In the one-dimensional case the definition of higher Brillouin zones trivially consists in dividing the axis symetrically into equal intervals, such as $K\in\langle-2\pi/a, -\pi/a\rangle \cup \langle \pi/a, 2\pi/a\rangle$ for the second one etc. 
+In the one-dimensional case the definition of higher Brillouin zones trivially consists in dividing the axis symetrically into equal intervals, such as $$K\in\langle-2\pi/a, -\pi/a\rangle \cup \langle \pi/a, 2\pi/a\rangle$$ for the second one etc. 
 
 In two or three dimensions the shapes of higher Brillouin zones become much more complex, and are unlike to each other \cite[pp. 134--135]{klingshirn2007semiconductor}: in two dimensions, all Brillouin zones are composed of polygons that are connected in their vertices to encircle the previous Brillouin zone \cite[p. 126]{brillouin2003wave}. Similarly, in three dimensions, they are composed of polyhedra connected by their edges, and their shape roughly resembles sphere shells. 
 
