--- a/result.tex
+++ b/result.tex
@@ -844,7 +844,7 @@ Through moderate reduction of the unit cell size $a$ to 90 $\upmu$m, as represen
 
 At the upper-frequency edge of the band with $\Neff'<0$, either the effective permeability or permittivity becomes positive, for $a\lesssim 92$ $\upmu$m or  $a\gtrsim 92$ $\upmu$m, respectively. This is another subtle, but qualitative change in the structure behaviour. 
 %It manifests itself in the mode shapes resolved by PWEM, and the effective impedance $\Zeff=\sqrt{\meff/\eeff}$ reaching either very low or very high values at the band edge. 
-At the exact radius of cross-over, the effective permittivity and permeability change their sign at the same frequency, and a \textit{zero-width band gap} is obtained \cite{croenne2009_subwl_hole}. Unlike the Fabry-Pérot resonances in 1-D PhC, this band gap is located at $\Neff'=0$, which results in a peculiar regime of operation: In an idealized loss-less model, the wave does not exponentially decay nor acquires any phase advance in the metamaterial volume. Still, its group velocity is nonzero. Hence, a spatial modulation of the wave envelope can propagate over the wave, which oscillates in phase. This can be viewed as a complementary phenomenon to the narrow photonic bands, where, due to vanishing inter-cell coupling, the phase velocity is orders of magnitude higher than the group velocity (c.f. the second band in Fig. \ref{fg_cdh2}b).
+At the exact radius of cross-over, the effective permittivity and permeability change their sign at the same frequency, and a \textit{zero-width band gap} is obtained. Unlike the Fabry-Pérot resonances in 1-D PhC, this band gap is located at $\Neff'=0$, which results in a peculiar regime of operation: In an idealized loss-less model, the wave does not exponentially decay nor acquires any phase advance in the metamaterial volume. Still, its group velocity is nonzero. Hence, a spatial modulation of the wave envelope can propagate over the wave, which oscillates in phase. This can be viewed as a complementary phenomenon to the narrow photonic bands, where, due to vanishing inter-cell coupling, the phase velocity is orders of magnitude higher than the group velocity (c.f. the second band in Fig. \ref{fg_cdh2}b).
 
 Both points of near-zero transmittance at $f_E$ and $f_M$, indicating individual resonances, come closer to each other with further reduction of $a$. The maximum transmittance between both resonances decreases approximately with the second power of the frequency difference:
 \begin{equation} \underset{f \in\,\langle f_E,f_M\rangle}{\text{max}} |t| \propto \frac{1}{(f_E-f_M)^{2}}, \label{eq_fEfM}\end{equation}
@@ -1037,17 +1037,16 @@ The highest frequency in the plots was determined by the onset of the first diff
 \end{figure}
 %}}}
 \paragraph{Standing surface plasmon resonance}%{{{
-At a frequency just below the onset of diffraction, a relatively narrow notch in the reflectance spectrum is observed. The frequency where $|r|$ drops close to zero depends on the slab thickness $d_z$ -- which will be shown later -- and on the slit width $d_x$. In the above figures where $d_z$ was fixed at $20$ $\upmu$m, the lowest frequency of the notch around $2.8$ THz is reached for $d_x/a_x \sim 0.3$ (see Fig. \ref{fg_yslit_xscan}a). For a narrower or wider slit, the frequency of the notch increases and eventually approaches the diffraction limit of $3.0$ THz. 
+At a frequency just below the onset of diffraction, a relatively narrow notch in the reflectance spectrum is observed. The frequency where $|r|$ drops close to zero depends on the slab thickness $d_z$ -- which will be shown later -- and on the slit width $d_x$. In the above figures where $d_z$ was fixed at $20$ $\upmu$m, the lowest frequency of the notch around $2.8$ THz is reached for $d_x/a_x \sim 0.3$ (see Fig. \ref{fg_yslit_xscan}a). 
 
-Nonetheless, the notch does not disappear and always some frequency can be found where nearly 100 \% of the energy is transmitted through the structure, even when the slits are extremely narrow.
+For a narrower or wider slit, the frequency of the notch increases and eventually approaches the diffraction limit of $3.0$ THz. 
+The notch becomes narrower, but does not appreciably reduce its depth. Always some frequency can be found where nearly 100 \% of the energy is transmitted through the structure, even when the slits are extremely narrow.
 
-The phenomenon known as \textit{extraordinary transmission} is mediated by surface plasmons propagating along the front and rear surfaces of the metallic sheet. The notch in reflectance is always observed at the exact frequency that stipulates that the plasmon wavelength is equal to the unit cell size $a_x$.
+This phenomenon known as \textit{extraordinary transmission} is mediated by surface plasmons propagating along the front and rear surfaces of the metallic sheet. The notch in reflectance is always observed at the exact frequency that stipulates that the plasmon wavelength is equal to the unit cell size $a_x$.
 
-% todo ... counter-propagating surface plasmons, with their wavelength exactly matching the transverse unit cell dimension $a_x$.
 Since the structure and fields are symmetric with regards to the $x$-axis, an equal amplitude of plasmons propagating forward and backward is excited. They form a standing plasmonic wave, with nodes of the oscillating current centered at the slit centers. The extraordinary transmission relies on coupling of the incoming plane wave to SPP, coupling of SPP to their mirror counterpart on the rear side of the structure, and re-radiation of the plane wave. Since it is a resonant process, it can transmit high amplitude through weak coupling of arbitrarily narrow slits. 
 
-For this to happen, extraordinary transmission however requires strict periodicity of the slits along the $x$-axis, and symmetry of the front and rear sides of the structure along the $z$-axis.
-A numerical experiment (not shown here) has proven that the $|r| \sim 0$ notch disappears when a dielectric substrate approaches one side of the structure. The dielectric did not have to touch the metal directly; a distance similar to $a_x$, or, the approximate decay length of the surface plasmons, was sufficient. When the dielectric substrate was added symmetrically from both sides, the extraordinary transmission was restored.
+For this to happen, however, extraordinary transmission requires strict periodicity of the slits along the $x$-axis, and symmetry of the front and rear sides of the structure along the $z$-axis. A numerical experiment (not shown here) has proven that the $|r| \sim 0$ notch disappears when a dielectric substrate approaches one side of the structure. The dielectric did not have to touch the metal directly; a distance similar the approximate decay length of the surface plasmons or similar to $a_x$, was sufficient. When the dielectric substrate was added symmetrically from both sides, the extraordinary transmission was restored.
 
 %}}}
 \begin{figure}[htb] %{{{ fg_yslit_dscan
@@ -1090,7 +1089,6 @@ The current-driven homogenisation setup simulates one unit cell in an exact peri
 % for double slits, clear interference of surface plasmons is visible with sinusoidal of slit pitch (lambdaSPP = 308nm)
 % (if the slits were periodic, a resonant coupling of the incident wave to surface plasmons would enable ~100% transmission)
 % experimental results 
-
 
 The points of low reflectance in Fig. \ref{fg_yslit_dscan}a correspond to the effective impedance of the structure $\Zeff \approx 1$, i.e. for the structure being matched to the surrounding air. The first set of such points starts very close to 3 THz (the diffraction limit)
 such a point in the spectra corresponds to a fundamental resonance of the slit.
@@ -1161,8 +1159,9 @@ Standing SPP wave
 %Osgood, Near infrared double metamaterials, Optics Express, vol. 13,
 %pp. 4922-4930 (2005).
 %
-%
-%
+
+% TODO \cite{jelinek2010fishnet}
+% TODO Jelineks
 
 
 
@@ -1265,3 +1264,4 @@ For simulation of the fishnet, the resolution in the FDTD simulation was deliber
 	%electric SRRs (eSRRs) [29], [30], pairs of rods [10], [12], [31], pair of crosses [32], fishnets [17], [33]”
 % Aleian 2012 Plasmonic Au SiO2 nanoparticles
 
+% TODO Ye2013 Negative Group Velocity in the Absence of Absorption Resonance
